--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "name": "com.unity.webrtc",
   "displayName": "WebRTC",
-  "version": "2.0.5-preview",
-  "unity": "2019.3",
+  "version": "2.1.0-preview.1",
+  "unity": "2019.4",
   "description": "The WebRTC package provides browsers and mobile applications with Real-Time Communications (RTC) capabilities.",
   "keywords": [
     "webrtc",
     "web"
   ],
+  "dependencies": {
+    "com.unity.editorcoroutines": "1.0.0"
+  },
   "samples": [
     {
       "displayName": "Example",
@@ -16,11 +19,11 @@
     }
   ],
   "upmCi": {
-    "footprint": "f4a72b67fb8883789fa5c7d80901e9585f95051b"
+    "footprint": "610be57b8e554dbe823161e48a096d06b4e390c4"
   },
   "repository": {
     "url": "https://github.com/Unity-Technologies/com.unity.webrtc.git",
     "type": "git",
-    "revision": "8aec6d25a8df2f17d3325c4965983e95bf50a60c"
+    "revision": "11b44e6d4be89ff48ce9424bfe5228259fe26265"
   }
 }
